# autodev-cli

./: README.md  env-example.txt  main.py  pyproject.toml  requirements.txt
practice_test_scripts/: app.py  script.py
src/autodev/: main.py  templates.py
src/autodev/core/: git_ops.py  github.py  project.py
src/autodev/ui/: output.py
