[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "autodev"
version = "0.1.0"
description = "A CLI tool to automate Python project setup"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "typer>=0.19.2",
    "rich>=14.2.0",
    "gitpython>=3.1.45",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]
[project.scripts]
autodev = "autodev.main:app"